# plasm

./: Cargo.toml  LICENSE  README.md  test.sky
ast/: Cargo.toml
ast/src/: ast.rs  ast_display.rs  error.rs  lib.rs  parser.rs
cli/: Cargo.toml
cli/src/: emit.rs  main.rs  printer.rs  theme.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  translator.rs
diagnostic/: Cargo.toml
diagnostic/src/: error_message.rs  lib.rs  lines_table.rs  span.rs
examples/: external_functions.sm  test.sky  test.sm
examples/syntactic_proposals/: enums.sm  impls.sm  struct_enum_composition.sm  structs.sm  type_and_alias.sm  union.sm
hir/: Cargo.toml
hir/src/: ast_translator.rs  error.rs  hir.rs  hir_display.rs  ids.rs  lib.rs  type_annotator.rs  types.rs
hir/src/type_annotator/: annotator.rs  func_ctx.rs  mod.rs  solver.rs  type_var.rs
mir/: Cargo.toml
mir/src/: hir_lowering.rs  lib.rs  mir.rs  mir_display.rs  types.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  parser.rs
syntax_tree/: Cargo.toml
syntax_tree/src/: ast.rs  cst.rs  error.rs  lib.rs  parser.rs
tokenizer/: Cargo.toml
tokenizer/src/: char_indices_iter.rs  diagnostic.rs  lib.rs  token.rs  token_display.rs  tokenizer.rs
utils/: Cargo.toml
utils/src/: binop.rs  ids.rs  lib.rs  primitive_types.rs
