[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sky"
path = "src/main.rs"

[dependencies]
ast = { path = "../ast" }
diagnostic = { path = "../diagnostic" }
tokenizer = { path = "../tokenizer" }
clap = { version = "4.5.48", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
