[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sky"
path = "src/main.rs"

[dependencies]
diagnostic = { path = "../diagnostic" }
tokenizer = { path = "../tokenizer" }
ast = { path = "../ast" }
hir = { path = "../hir" }

serde.workspace = true
serde_json.workspace = true

# CLI dependencies
clap = { version = "4.5.48", features = ["derive"] }
anstream = { version = "0.6.20", features = ["auto"] }
anstyle = "1.0.13"
